<resources>
    <string name="app_name">Green Doctor</string>
    <string name="buttonSelectPhoto">Select Photo</string>
    <string name="buttonTakePhoto">Start Camera</string>
    <string name="buttonDiagnose">Detect</string>
    <string name="defaultImage">Default image set now...</string>
    <string name="descriptionImage">View for displaying image</string>
    <string name="Camera">Camera</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="username">Username</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up_details">Add your details to sign up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="personal_todo">Personal Todo</string>
    <string name="team_todo">Team Todo</string>
    <string name="keep_it_up">Keep it up!</string>
    <string name="your_daily_goals_almost_done">Your daily goals almost done</string>
    <string name="todo">Todo</string>
    <string name="progress">Progress</string>
    <string name="done">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo_title">Todo Title</string>
    <string name="creation_date">1 April 2023</string>
    <string name="creation_time">02:17 AM</string>
    <string name="todo_description">An application that helps to choose personal clothes to make life more difficult!</string>
    <string name="assignee_name">Assignee Name</string>
    <string name="no_internet_connection_title">No Internet Connection</string>
    <string name="no_internet_connection_message">Please check your internet connection and try again</string>
    <string name="retry">Retry</string>

    <string name="food">"An introduction to the identification of plant diseases: Plant diseases can have a significant impact on crop yields and can affect the quality and safety of agricultural products. Early detection and identification of plant diseases is crucial to prevent their spread and minimize their impact on plant health and agricultural productivity."</string>
    <string name="history_second_text">Here are some steps involved in the identification of plant diseases:Symptoms observation: The first step in identifying a plant disease is to observe the symptoms exhibited by the plant. Symptoms can include discoloration, wilting, lesions, or deformations. Identifying the specific symptoms can give a clue about the potential cause of the disease.
Sample collection: Once the symptoms are identified, a sample of the plant should be collected for further analysis. It is important to collect a representative sample that includes both diseased and healthy tissue.
Laboratory analysis: The collected sample is analyzed in a laboratory by trained professionals. A range of techniques can be used to identify the disease, including microscopy, serology, and molecular methods.
Diagnosis: Based on the laboratory analysis, a diagnosis is made about the specific disease that is affecting the plant. This is important because different diseases require different treatments, and accurate diagnosis is critical for effective disease management.
Disease management: Once the disease is identified, appropriate management strategies can be implemented to prevent its spread and minimize its impact on plant health. These strategies may include the use of fungicides, crop rotation, or genetic resistance.
Overall, the identification of plant diseases is a complex process that requires a combination of observation, laboratory analysis, and experise. Accurate and timely identification is essential for effective disease management and ensuring the health and productivity of agricultural crops.</string>
</resources>
