<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/mCameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/buttonTakePhoto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mPhotoImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/mGalleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/buttonSelectPhoto"
            app:layout_constraintBottom_toTopOf="@+id/mPhotoImageView"
            app:layout_constraintEnd_toStartOf="@+id/mDetectButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/mCameraButton"
            app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/mPhotoImageView"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/descriptionImage"
            app:layout_constraintBottom_toTopOf="@+id/mDetectButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:shapeAppearance="@style/image"
            app:srcCompat="@android:color/darker_gray" />


    <Button
            android:id="@+id/mDetectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/buttonDiagnose"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mResultTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/mResultTextView"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/defaultImage"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu_bottom_nav_bar"
            app:labelVisibilityMode="selected"
            />
</androidx.constraintlayout.widget.ConstraintLayout>